<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6840a"
        >
        <Button android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            />
        <TextView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/input_mobile_number"
        />
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_description"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/region_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_code_china"/>
        <EditText android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </LinearLayout>
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_get_valid_code"
        android:text="@string/btn_get_valid_code"/>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_wekey_user_license_agreement"
        />
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user_license_agreement"
        android:textColor="#000088"/>
</LinearLayout>
